<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="ip_op_field_hint">0</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">\u00D7</string>
    <string name="divide">\u00F7</string>
    <string name="equal">=</string>
    <string name="backspace">Remove</string>
    <string name="all_clear">AC</string>


    <string name="choose_theme">Choose Theme</string>
    <string name="available_themes">Available Themes</string>
    <string name="standard_theme">Standard Theme</string>
    <string name="simple_theme">Simple Theme</string>

</resources>